making recipe of Stew

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>recipes</title>
 </head>
 <body>
-    <h1>Titles</h1>
+    <h1><a href="recipes/lasagna.html"></a>Odin Recipes</h1>
 </body>
 </html>
