--- a/recipes/stew.html
+++ b/recipes/stew.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
+    <header>
+      <h1>Beef Stew<img src="stew.webp" height="512" width="683" alt="Stew.webp" /></h1>
+    </header>
     <main>
-    <h1>Beef Stew</h1>
-    <img src="stew.webp" height="512" width="683" alt="Stew.webp">
-    <h2>Description</h2>
-    <p>The key to beef stew is red wine. Although the alcohol content is lost during the stewing process, it adds flavor and richness, giving the stew a much deeper taste.</p>
-    <p>Cut vegetables such as potatoes and carrots into large chunks for a hearty, satisfying flavor that is perfect for the volume of beef!</p>
-    <h2>Ingredients</h2>
-    <h3>(4-6 servings)</h3>
-    <ul>
+      <h2>Description</h2>
+      <p>
+        The key to beef stew is red wine. Although the alcohol content is lost
+        during the stewing process, it adds flavor and richness, giving the stew
+        a much deeper taste.
+      </p>
+      <p>
+        Cut vegetables such as potatoes and carrots into large chunks for a
+        hearty, satisfying flavor that is perfect for the volume of beef!
+      </p>
+      <h2>Ingredients</h2>
+      <h3>(4-6 servings)</h3>
+      <ul>
         <li>Beef (for stew) __400g</li>
         <li>Potatoes __ 3-4 pieces</li>
         <li>carrot __ 2 to 3 carrots</li>
@@ -24,24 +32,39 @@
         <li>salt __ a pinch of salt</li>
         <li>pinch of coarsely ground black pepper __ a pinch</li>
         <li>bay leaves __ 2 leaves</li>
-    </ul>
-    <h3>Group of A</h3>
-    <ul>
+      </ul>
+      <h3>Group of A</h3>
+      <ul>
         <li>Red wine __ 1 cup</li>
         <li>butter __ 3 tablespoons</li>
         <li>Worcestershire sauce __ 3/4 cup</li>
         <li>Ketchup __ 6 tablespoons</li>
-    </ul>
-    <h2>Steps</h2>
-    <ol>
+      </ul>
+      <h2>Steps</h2>
+      <ol>
         <li>Dissolve granulated soup stock in hot water to make soup.</li>
         <li>Sprinkle the beef with salt and coarsely ground black pepper.</li>
-        <li>Heat a large frying pan (or pot) over medium-high heat, add the beef without oil and brown it quickly, add the broth and bay leaf. Bring to a boil, remove the scum and simmer for 15 minutes.</li>
-        <li>Peel potatoes, cut into large chunks, and rinse in cold water. Peel carrots and cut into 1.5 cm thick half-moon slices. Cut onion into bite-sized pieces.</li>
-        <li>Add the potatoes and carrots to the pan, cover, and cook over low-medium heat for another 30 minutes, until the vegetables are tender.</li>
-        <li>Add the onions, season with A, and cook for another 15 to 20 minutes, stirring occasionally.</li>
-        <li>* When adding A, you may adjust the amount of Worcestershire sauce or ketchup to taste.</li>
-    </ol>
-</main>
-</body>
+        <li>
+          Heat a large frying pan (or pot) over medium-high heat, add the beef
+          without oil and brown it quickly, add the broth and bay leaf. Bring to
+          a boil, remove the scum and simmer for 15 minutes.
+        </li>
+        <li>
+          Peel potatoes, cut into large chunks, and rinse in cold water. Peel
+          carrots and cut into 1.5 cm thick half-moon slices. Cut onion into
+          bite-sized pieces.
+        </li>
+        <li>
+          Add the potatoes and carrots to the pan, cover, and cook over
+          low-medium heat for another 30 minutes, until the vegetables are
+          tender.
+        </li>
+        <li>
+          Add the onions, season with A, and cook for another 15 to 20 minutes,
+          stirring occasionally.<br> * When adding A, you may adjust the amount of Worcestershire sauce or
+          ketchup to taste.
+        </li>
+      </ol>
+    </main>
+  </body>
 </html>
