--- a/recipes/Onion.html
+++ b/recipes/Onion.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/styles.css"/>
     <title>Document</title>
 </head>
-<body>
+<body class="onion">
     <header>
-        <h1>French Onion Soup<img src="13309-rich-and-simple-french-onion-soup-DDMFS-4x3-31ad7eaa56234d20ae35c3940fd03f36.jpg" height="512" width="683" alt="French Onion Soup.jpg"></h1>
+        <div class="title-with-img">
+            <h1>French Onion Soup</h1>
+            <img src="13309-rich-and-simple-french-onion-soup-DDMFS-4x3-31ad7eaa56234d20ae35c3940fd03f36.jpg" height="512" width="683" alt="French Onion Soup.jpg">
+        </div>
     </header>
     <main>
         <h2>Description</h2>
@@ -19,7 +23,7 @@
              onion soup in the comfort of your own kitchen. Plus, get our best ingredient 
              tips and storage secrets.
         </p>
-        <h2>Ingredients</h2>
+        <h2 class="ingredients">Ingredients</h2>
         <ul>
             <li>½ cup unsalted butter</li>
             <li>2 tablespoons olive oil</li>
@@ -33,7 +37,7 @@
             <li>2 slices Swiss cheese, diced</li>
             <li>¼ cup grated Parmesan cheese</li>
         </ul>
-        <h2>Step</h2>
+        <h2 class="step">Step</h2>
         <ol>
             <li>Gather all ingredients.</li>
             <li>Melt butter with olive oil in an 8-quart stock pot over medium heat. Add onions to butter and continually stir until tender and translucent. Do not brown the onions.</li>
