--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css" />
     <title>recipes</title>
 </head>
-<body>
+<body class="index">
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/Stew.html">Beef stew</a></li>
