--- a/recipes/stew.html
+++ b/recipes/stew.html
@@ -3,11 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/styles.css"/>
     <title>Document</title>
   </head>
-  <body>
+  <body class="stew">
     <header>
-      <h1>Beef Stew<img src="stew.webp" height="512" width="683" alt="Stew.webp" /></h1>
+      <div class="title-with-img">
+        <h1>Beef Stew</h1>
+        <img src="stew.webp" height="512" width="683" alt="Stew.webp"/>
+      </div>
     </header>
     <main>
       <h2>Description</h2>
@@ -20,7 +24,7 @@
         Cut vegetables such as potatoes and carrots into large chunks for a
         hearty, satisfying flavor that is perfect for the volume of beef!
       </p>
-      <h2>Ingredients</h2>
+      <h2 class="ingredients">Ingredients</h2>
       <h3>(4-6 servings)</h3>
       <ul>
         <li>Beef (for stew) __400g</li>
@@ -40,7 +44,7 @@
         <li>Worcestershire sauce __ 3/4 cup</li>
         <li>Ketchup __ 6 tablespoons</li>
       </ul>
-      <h2>Steps</h2>
+      <h2 class="step">Step</h2>
       <ol>
         <li>Dissolve granulated soup stock in hot water to make soup.</li>
         <li>Sprinkle the beef with salt and coarsely ground black pepper.</li>
